--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     
     <h1>  HOLA GIT </h1>
-   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt, dolorem eveniet ex expedita architecto nesciunt possimus facilis ab quia exercitationem optio quod perspiciatis iure id nulla dignissimos quo aliquam accusamus.</p>
+<h2>cambio</h2>
 </body>
 </html>
