--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 <body>
     
     <h1>  HOLA GIT </h1>
 <h2>cambio</h2>
+<article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta deleniti ratione laborum delectus in mollitia obcaecati architecto animi officiis ea voluptatum a iste error, nihil, impedit voluptas perspiciatis non libero?</article>
 </body>
 </html>
